force-app/main/default/objects/Project_Relationships__c/Project_Relationships__c.object-meta.xml
<CustomObject>
    <label>Project Relationship</label>
    <nameField>
        <displayFormat>AccProj-{00000}</displayFormat>
        <label>Project Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>