force-app/main/default/objects/Project_Relationships__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This links to the organization or Account for the Architect, General Contractor, etc.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Relationships</relationshipLabel>
    <relationshipName>Project_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>