force-app/main/default/objects/Project_Relationships__c/fields/Attitude_KPI__c.field-meta.xml
<CustomField>
    <fullName>Attitude_KPI__c</fullName>
    <formula>CASE(Attitude__c, &quot;Supportive&quot;, IMAGE(&quot;/resource/ActvityStatusKPI/Green.gif&quot;, &quot;Supportive&quot;),
&quot;Neutral&quot;, IMAGE(&quot;/resource/ActvityStatusKPI/yellow.gif&quot;, &quot;Neutral&quot;),
&quot;Opposed&quot;, IMAGE(&quot;/resource/ActvityStatusKPI/Red.gif&quot;, &quot;Opposed&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attitude KPI</label>
    <type>Text</type>
</CustomField>