force-app/main/default/objects/Project_Relationships__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Contact within the linked Account that is associated with this project</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Relationships</relationshipLabel>
    <relationshipName>Project_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>