force-app/main/default/objects/Project_Relationships__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>