force-app/main/default/objects/Project_Relationships__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not on it anymore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>