force-app/main/default/objects/Project_Relationships__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <label>General Contractor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>