force-app/main/default/objects/Project_Relationships__c/fields/Staff_Role__c.field-meta.xml
<CustomField>
    <fullName>Staff_Role__c</fullName>
    <label>Staff Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>PM/Supt</fullName>
            </value>
            <value>
                <fullName>Precon</fullName>
            </value>
            <value>
                <fullName>Proj. Ex.</fullName>
            </value>
            <value>
                <fullName>PX</fullName>
            </value>
            <value>
                <fullName>Sr. PM</fullName>
            </value>
            <value>
                <fullName>Supt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>