force-app/main/default/objects/Project_Relationships__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Status defines the current status of this vendor to the project. It tells you if they have the project, influence, etc.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Probable</fullName>
            </value>
            <value>
                <fullName>Apparent</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Blacklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>