force-app/main/default/objects/Project_Relationships__c/fields/Use_Contact_as_Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Contact_as_Project_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Contact as Project Address</label>
    <type>Checkbox</type>
</CustomField>