force-app/main/default/objects/Project_Relationships__c/validationRules/Both_Checkbox_can_not_be_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Checkbox_can_not_be_True</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Use_Account_as_Project_Address__c, Use_Contact_as_Project_Address__c)</errorConditionFormula>
    <errorMessage>Both Use as Project Address check box can not be true.</errorMessage>
</ValidationRule>